Fixed overlay z-index

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -69,6 +69,7 @@
 	width:100vw;
 	height:100vh;
 	background: #0F111199;
+	z-index: 100;
 }
 
 .popoverGallery {
